fixing tags for ansible galaxy entry

--- a/ci/templates/galaxy.yml.j2
+++ b/ci/templates/galaxy.yml.j2
@@ -31,10 +31,10 @@ license:
 # A list of tags you want to associate with the collection for indexing/searching. A tag name has the same character
 # requirements as 'namespace' and 'name'
 tags:
-  - pip3
-  - pipenv
-  - python3
-  - pyenv
+  - hashcat
+  - password_cracking
+  - nvidia
+  - gpus
 
 # Collections that this collection requires to be installed for it to be usable. The key of the dict is the
 # collection label 'namespace.name'. The value is a version range
@@ -43,7 +43,7 @@ tags:
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: https://github.com/elreydetoda/ansible-collection-pipenv
+repository: https://github.com/elreydetoda/ansible-collection-cracking_server
 
 # The URL to any online docs
 documentation: ''
@@ -52,7 +52,7 @@ documentation: ''
 homepage: ''
 
 # The URL to the collection issue tracker
-issues: https://github.com/elreydetoda/ansible-collection-pipenv/issues
+issues: https://github.com/elreydetoda/ansible-collection-cracking_server/issues
 
 # A list of file glob-like patterns used to filter any files or directories that should not be included in the build
 # artifact. A pattern is matched from the relative path of the file or directory of the collection directory. This
