fixing description for ansible galaxy entry

--- a/ci/templates/galaxy.yml.j2
+++ b/ci/templates/galaxy.yml.j2
@@ -21,7 +21,7 @@ authors:
 
 ### OPTIONAL but strongly recommended
 # A short summary description of the collection
-description: this collection handles both the pre-reqs install for pipenv and installing deps based on pipenv's Pipfile
+description: this collection handles processes for setting up the cracking server for https://elrey.casa/si
 
 # Either a single license or a list of licenses for content inside of a collection. Ansible Galaxy currently only
 # accepts L(SPDX,https://spdx.org/licenses/) licenses. This key is mutually exclusive with 'license_file'
